--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ h6 {
 
 p {
   line-height: 27px;
-  font-size: 18px;
+  font-size: 17px;
   font-family: "heebo";
   color: #6a6868;
   font-weight: 400;
@@ -105,7 +105,7 @@ p {
   }
 
   p {
-    font-size: 16px;
+    font-size: 15px;
     line-height: 22px;
   }
 }
@@ -358,11 +358,11 @@ footer {
 }
 
 footer .col-sm-6 {
-  padding: 15px 10% 0 0;
+  padding: 15px 16px 0 16px
 }
 
 footer .col-sm-3 {
-  padding: 15px 0 0;
+  padding: 15px 0 0 0;
 }
 
 footer img {
@@ -371,13 +371,13 @@ footer img {
 
 footer p {
   color: #d6d4d3;
-  font-size: 14px;
+  font-size: 15px;
   line-height: 21px;
 }
 
 footer h3 {
   color: #40a105;
-  font-size: 16px;
+  font-size: 18px;
   margin: 10px 0 22px;
 }
 
